objects/Possible_Interviewers__c/Possible_Interviewers__c.object-meta.xml
<CustomObject>
    <label>Possible Interviewer</label>
    <nameField>
        <displayFormat>PSINT {00000}</displayFormat>
        <label>Possible Interviewer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Possible Interviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>