objects/Possible_Interviewers__c/fields/Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stage__c</fullName>
    <label>Interview Stage</label>
    <referenceTo>Interview_Stage__c</referenceTo>
    <relationshipLabel>Possible Interviewers</relationshipLabel>
    <relationshipName>Possible_Interviewers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>