objects/Possible_Interviewers__c/fields/Interviewer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Full_Name__c</fullName>
    <formula>Interviewer__r.FirstName &amp;&quot; &quot;&amp;  Interviewer__r.LastName</formula>
    <label>Interviewer Full Name</label>
    <type>Text</type>
</CustomField>